# kapoorgalleries

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  INVENTORY.md  Makefile  OPERATIONS.md  README.md  pyproject.toml  render.yaml
READY_TO_PUBLISH/: README.md
apps_script/: Code.gs  README.md  appsscript.json
audits/: 2026-05-07-backup-folder-triage.md  2026-05-07-backup-ingestion.md  2026-05-07-source-side-sync-removal.md
catalog/: sources.yaml
data/: artsy_upload.csv  auto_resolution_rules.yaml  collection_seed_audit.csv  collections.json  collections.yaml  conflicts.csv  enrichment_audit.csv  gaps.csv  history.csv  human_resolutions.yaml  inventory.db  master.csv  master.json  master_provenance.csv  masterworks.json  photo_queue.csv  primer_corrections.csv  site.json  site.yaml  sold_candidates.csv  website_inventory.json  website_inventory_enriched.json
docs/: BACKEND_API.md  IMAGE_FOLDERS.md  SOURCE_MATERIALS_INDEX.md  WEBSITE_INTEGRATION.md  WEBSITE_SCHEMA.md
reports/: coverage_report.md  gaps_report.md  photo_queue.md  provenance_report.md  upload_summary_2026-06-04.md
scripts/: bootstrap.sh  fetch_drive.py  fetch_pdfs.sh  inventory-backup-folders-2026-05-07.gs  issuu_upload.sh  quarantine-backup-ingestion-2026-05-07.gs  upload_all.sh
src/: cli.py  consolidate.py  db.py  ids.py  normalize.py  reports.py  schema.py
tests/: test_api.py  test_artsy_csv.py  test_bulk_upload.py  test_cli_views.py  test_exports_deterministic.py  test_ids.py  test_init_db.py  test_normalize.py  test_pipeline.py  test_price_list_kg.py  test_primer_corrections.py  (+7 more)
(+53 files in other folders)
